Migrate bootstrap to shared bootstrap